--- a/demo/src/App.scss
+++ b/demo/src/App.scss
@@ -9,14 +9,17 @@ $--bgColor: #121223;
 
 html {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   background: $--bgColor;
+  display: flex;
+  flex: 1;
+  height: 100%;
+  overflow: auto;
   body {
     width: 100%;
-    height: 100%;
+    // height: 100%;
     display: flex;
     flex: 1;
-    overflow: hidden;
     #root {
       display: flex;
       flex: 1;
@@ -33,15 +36,11 @@ html {
 
 
 .App {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  align-items: center;
-  // justify-content: center;
+  width: 80%;
+  margin: auto;
 
   .top {
-    padding: 2em;
-    width: 85%;
+    width: 100%;
     padding-top: 3em;
     align-self: flex-start;
 
@@ -76,13 +75,23 @@ html {
       color: rgba(white, 0.3);
       font-size: 130%;
       margin-bottom: 0.6em;
+      width: 90%;
+      max-width: 25em;
     }
   }
   .middle {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     flex: 1;
+    flex-shrink: 0;
+    margin-top: 4em;
+    .thumb-wrapper {
+      width: 100%;
+      background: #ffffff03;
+      padding: 2em;
+      margin-bottom: 2em;
+    }
     .thumb-label {
       color: rgba(white, 0.4);
       text-align: center;
@@ -94,34 +103,36 @@ html {
   .bottom {
     // background: yellow;
     color: white;
-    color: rgba(white, 0.8);
+    color: rgba(white, 0.4);
     padding: 2em;
     font-size: 80%;
+    text-align: center;
 
-    transform: translateY(30%);
-    opacity: 0;
-    animation: appearBottom 0.6s ease-in-out 1.1s;
-    // animation-iteration-count: infinite;
-    animation-fill-mode: forwards;
-
-    @keyframes appearBottom {
-      0% {
-        opacity: 0;
-        transform: translateY(30%);
-      }
-      // 50% {
-      //   opacity: 0.2;
-      //   transform: translateY(50%);
-      // }
-      100% {
-        opacity: 0.8;
-        transform: translateY(0%);
-      }
-    }
+    // transform: translateY(30%);
+    // opacity: 0;
+    // animation: appearBottom 0.6s ease-in-out 1.1s;
+    // // animation-iteration-count: infinite;
+    // animation-fill-mode: forwards;
+    //
+    // @keyframes appearBottom {
+    //   0% {
+    //     opacity: 0;
+    //     transform: translateY(30%);
+    //   }
+    //   // 50% {
+    //   //   opacity: 0.2;
+    //   //   transform: translateY(50%);
+    //   // }
+    //   100% {
+    //     opacity: 0.8;
+    //     transform: translateY(0%);
+    //   }
+    // }
 
     a {
       color: #ef4040;
       text-decoration: none;
+      opacity: 0.6;
     }
   }
 }
