--- a/demo/src/App.scss
+++ b/demo/src/App.scss
@@ -37,6 +37,7 @@ html {
 
 .App {
   width: 80%;
+  max-width: 40em;
   margin: auto;
 
   .top {
@@ -68,13 +69,13 @@ html {
 
     h1 {
       color: white;
-      margin-bottom: 0.2em;
+      margin-bottom: 0.6em;
       font-size: 190%;
     }
     h2 {
       color: rgba(white, 0.3);
       font-size: 130%;
-      margin-bottom: 0.6em;
+      margin-bottom: 1.25em;
       width: 90%;
       max-width: 25em;
     }
@@ -85,7 +86,7 @@ html {
     align-items: center;
     flex: 1;
     flex-shrink: 0;
-    margin-top: 4em;
+    margin-top: 6em;
     .thumb-wrapper {
       width: 100%;
       background: #ffffff03;
@@ -106,6 +107,7 @@ html {
     color: rgba(white, 0.4);
     padding: 2em;
     font-size: 80%;
+    margin-top: 4em;
     text-align: center;
 
     // transform: translateY(30%);
